err/localization.err
Listing '.'...
Listing './bin'...
Compiling './bin/sample.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Localization-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/localization'...
Compiling './lib/python3.5/site-packages/localization/find_centroid.py'...
***   File "./lib/python3.5/site-packages/localization/find_centroid.py", line 65
    print '(!)Warning: in checkCan'
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/localization/geoProject.py'...
***   File "./lib/python3.5/site-packages/localization/geoProject.py", line 23
    print str(ID)+':Anchor with same ID already exists'
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/localization/geometry.py'...
***   File "./lib/python3.5/site-packages/localization/geometry.py", line 93
    raise geoError,'InputError'
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/localization/methods.py'...
***   File "./lib/python3.5/site-packages/localization/methods.py", line 20
    raise cornerCases, 'Unknown'
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/localization/shapely_earth1.py'...
***   File "./lib/python3.5/site-packages/localization/shapely_earth1.py", line 93
    raise gx.geoError, 'Algorithmic bug in polygonizing for earth model '
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/localization/test'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
